<resources>

    <string name="refreshText">Pull Down to Refresh</string>

    <string name="title_activity_control">ControlActivity</string>

    <string name="no_ble">BLE not supported</string>

    <string name="app_name">RemoteControl</string>

    <!-- Misc items -->
    <string name="zero">0</string>
    <string name="lighttheme">LightTheme</string>
    <string name="darktheme">DarkTheme</string>
    <string name="submit">SUBMIT</string>
    <string name="themeheadline">Theme</string>
    <string name="control_headline">Control Color</string>
    <string name="dark_green_light_green">dark green/light green</string>
    <string name="red_orange">red/orange</string>
    <string name="indigo_pink">indigo/pink</string>
    <string name="red_blue">red/blue</string>
    <string name="ball_size_headline">Ball Size</string>
    <string name="size_small">small</string>
    <string name="size_medium">medium</string>
    <string name="size_big">big</string>
    <string name="angle">Angle [°]</string>
    <string name="speed_m_s">Speed [m/s]</string>
    <string name="welcome">Welcome</string>
    <string name="to_roboboy">to RoboBoy</string>
</resources>
